[gd_scene load_steps=8 format=3 uid="uid://dntk6lj36wcm"]

[ext_resource type="Script" path="res://scripts/forceDebug.gd" id="1_cxfgv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kqgam"]
shading_mode = 0
albedo_color = Color(0.886275, 0.305882, 0.4, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_chu4l"]
material = SubResource("StandardMaterial3D_kqgam")
top_radius = 0.05
bottom_radius = 0.05
height = 1.0
radial_segments = 6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cky41"]
shading_mode = 0
albedo_color = Color(0.698039, 0.890196, 0.282353, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_h0tiv"]
material = SubResource("StandardMaterial3D_cky41")
top_radius = 0.05
bottom_radius = 0.05
height = 1.0
radial_segments = 6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ydd5x"]
shading_mode = 0
albedo_color = Color(0.345098, 0.654902, 0.937255, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_xebqh"]
material = SubResource("StandardMaterial3D_ydd5x")
top_radius = 0.05
bottom_radius = 0.05
height = 1.0
radial_segments = 6

[node name="ForcesDebug" type="Node3D"]
script = ExtResource("1_cxfgv")

[node name="VectorX" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -1, 3.48787e-16, 1, -4.37114e-08, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_chu4l")
skeleton = NodePath("")

[node name="VectorY" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
mesh = SubResource("CylinderMesh_h0tiv")
skeleton = NodePath("")

[node name="VectorZ" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, -6.66424e-31, 2.91303e-38, 0, -4.37114e-08, -1, 6.66424e-31, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_xebqh")
skeleton = NodePath("")
